--- a/styles.scss
+++ b/styles.scss
@@ -65,8 +65,9 @@
         text-transform: uppercase;
         font-size: 16px;
         margin: 5rem 0 0 6rem;
-        padding: 2em;
+        padding: 1.5em;
         background-color: rgb(216, 50, 50);
+        border: none;
 
         i {
           padding-left: 0.3em;
@@ -76,6 +77,47 @@
     }
 
     .hero-right {
+      padding-top: 2rem;
+      text-align: center;
+
+      button {
+        padding: 0.8em;
+        color: white;
+        text-transform: uppercase;
+        font-size: 16px;
+        background-color: rgb(216, 50, 50);
+        border: none;
+
+        i {
+          padding-left: 0.3em;
+        }
+      }
+
+      h2 {
+        font-size: 26px;
+        margin: 0.5em 3em;
+      }
+
+      .free-shake {
+        display: flex;
+        flex-direction: column;
+
+        h3 {
+          margin: 1em;
+          text-transform: capitalize;
+        }
+
+        button {
+          max-width: 200px;
+          margin: auto;
+        }
+
+        img {
+          margin: 1em auto 0 auto;
+          width: 400px;
+          height: auto;
+        }
+      }
     }
   }
 
