--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 // Variables
+// Media Queries
 $mq-small: 475px;
 $mq-med: 1394px;
 $mq-large: 1600px;
@@ -131,15 +132,6 @@ $mq-large: 1600px;
           }
         }
       }
-    }
-  }
-
-  h1,
-  h2,
-  h3,
-  button {
-    @media (max-width: $mq-med) {
-      font-size: 20px;
     }
   }
   // container end
