--- a/styles.scss
+++ b/styles.scss
@@ -13,6 +13,12 @@ $mq-large: 1600px;
   max-width: 100%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
+  // Container - Global styles
+  button:hover,
+  a:hover {
+    cursor: pointer;
+  }
+
   section.navbar {
     padding: 1.5rem 0;
     display: flex;
@@ -52,6 +58,7 @@ $mq-large: 1600px;
   section.hero {
     display: grid;
     grid-template-columns: 7fr 3fr;
+    margin-bottom: 5em;
 
     .hero-left {
       background-image: url("https://images.unsplash.com/photo-1521804906057-1df8fdb718b7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
@@ -131,6 +138,61 @@ $mq-large: 1600px;
             width: 350px;
           }
         }
+      }
+    }
+  }
+  .header {
+    background-color: whitesmoke;
+    padding-bottom: 2em;
+
+    p {
+      text-align: center;
+      font-size: 32px;
+      font-weight: bold;
+      margin: 0 40vw 2em 40vw;
+      padding: 2em 0 0.25em 0;
+      border-bottom: 2px solid black;
+      text-transform: uppercase;
+    }
+  }
+  section.product-grid {
+    margin-top: 4em;
+    padding: 0 3em;
+    display: grid;
+    grid-template: 1fr / repeat(8, 1fr);
+    grid-row-gap: 5em;
+    text-align: center;
+
+    .product {
+      // border: 2px solid black;
+      grid-column: span 2;
+      padding: 10px 20px;
+      display: flex; // Used flexbox to reduce horizontal margin
+      flex-direction: column;
+      margin: auto;
+
+      p.p-name {
+        font-size: 22px;
+        max-width: 200px;
+      }
+      img {
+        width: 150px;
+        height: auto;
+        margin: 1em auto;
+      }
+      p.p-price {
+        font-size: 20px;
+        font-weight: bold;
+        max-width: 200px;
+      }
+      .p-button {
+        padding: 0.6em;
+        margin: 1em 0;
+        border: 1px solid whitesmoke;
+        background-color: rgb(0, 132, 255);
+        color: white;
+        text-transform: uppercase;
+        font-size: 14px;
       }
     }
   }
