--- a/styles.scss
+++ b/styles.scss
@@ -36,7 +36,23 @@ $mq-large: 1600px;
         li {
           text-transform: uppercase;
           padding: 0 1em;
+
+          a {
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            height: 100%;
+            color: black;
+            font-weight: 500;
+          }
         }
+      }
+    }
+    #products-tab {
+      display: none;
+
+      ul {
+        list-style-type: none;
       }
     }
   }
